jazzhands-zonegen-server (0.69.8) trusty; urgency=medium

  * only mark dns change records that were there to start as done

 -- Todd M. Kover <kovert@omniscient.com>  Mon,  7 Mar 2016 17:08:03 +0000

jazzhands-zonegen-server (0.66.1) trusty; urgency=medium

  * add debian bits; make that the default for release generation

 -- Todd M. Kover <kovert@omniscient.com>  Tue, 05 Jan 2016 23:02:07 +0000

jazzhands-zonegen-server (0.62.0) unstable; urgency=low

  * add support for generating additional acls independent of sites

 -- Todd Kover <kovert@omniscient.com>  Tue, 02 Jun 2015 00:00:00 +0000

jazzhands-zonegen-server (0.58.6) unstable; urgency=low

  * better handle exclusions for child subnets assigned to different sites

 -- Todd Kover <kovert@omniscient.com>  Thu, 11 Sep 2014 00:00:00 +0000

jazzhands-zonegen-server (0.58.5) unstable; urgency=low

  * add --nogen option and more verbosity/debug

 -- Todd Kover <kovert@omniscient.com>  Thu, 11 Sep 2014 00:00:00 +0000

jazzhands-zonegen-server (0.58.4.2) unstable; urgency=low

  * fix path to spec file

 -- Todd Kover <kovert@omniscient.com>  Wed, 25 Jun 2014 00:00:00 +0000

jazzhands-zonegen-server (0.58.4.1) unstable; urgency=low

  * remove extra my that unfortunately change of a variable

 -- Todd Kover <kovert@omniscient.com>  Wed, 25 Jun 2014 00:00:00 +0000

jazzhands-zonegen-server (0.58.4) unstable; urgency=low

  * migrate to generate-and-sync from do-zone-generation

 -- Todd Kover <kovert@omniscient.com>  Tue, 24 Jun 2014 00:00:00 +0000

jazzhands-zonegen-server (0.58.3) unstable; urgency=low

  * generate the allzone_hostfile smartly, update docs
  * update docs wit detail of other changes that went in recently
  * make the mtime of a zone the same as the db's last generated date

 -- Todd Kover <kovert@omniscient.com>  Fri, 20 Jun 2014 00:00:00 +0000

jazzhands-zonegen-server (0.57.10) unstable; urgency=low

  * migrate zonegen to Net::IP from Net::Netmask