@@ -1,6 +1,7 @@
 jazzhands-zonegen-server (0.69.8) trusty; urgency=medium
 
   * only mark dns change records that were there to start as done
+  * add random-sleep argument
 
  -- Todd M. Kover <kovert@omniscient.com>  Mon,  7 Mar 2016 17:08:03 +0000
 
